--- a/client/src/components/login/changePassword.css
+++ b/client/src/components/login/changePassword.css
@@ -1,17 +1,54 @@
-.changepwdContainer {
-    overflow: hidden;
-    height: 100%;
-    display: flex;
-    width: 100%;
-    padding: 0px;
-    margin: 0px;
+@media screen and (min-width: 900px) {
+    .changepwdContainer {
+        overflow: hidden;
+        height: 100%;
+        display: flex;
+        width: 100%;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .changepwdContainer .img-container {
+        width: 50%;
+        height: 100%;
+        padding: 0px;
+        margin-left: 0px;
+    }
+
+    .changepwdContainer .rootContainer {
+        display: flex;
+        width: 50%;
+        background-color: #1e1e1e;
+        align-items: center;
+        justify-items: center;
+    }
 }
 
-.changepwdContainer .img-container {
-    width: 50%;
-    height: 100%;
-    padding: 0px;
-    margin-left: 0px;
+@media screen and (max-width: 900px) {
+    .changepwdContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #1e1e1e;
+    }
+
+    .changepwdContainer .img-container {
+        display: none;
+    }
+
+    .changepwdContainer .rootContainer {
+        display: flex;
+        min-width: fit-content;
+        /* width: 50%; */
+        background-color: #1e1e1e;
+        align-items: center;
+        justify-items: center;
+    }
+}
+
+.changepwdContainer .rootContainer .errorContainer input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px black inset;
 }
 
 .changepwdContainer .loginImg {
