--- a/client/src/components/dashboard/dashboard.css
+++ b/client/src/components/dashboard/dashboard.css
@@ -1,8 +1,3 @@
-/* .dashboardContainer {
-    padding: 4rem 1rem;
-    margin-left: 1rem;
-} */
-
 .header {
     display: flex;
     flex-direction: row;
@@ -75,31 +70,110 @@
     background-color: #e4e4e4;
 }
 
-.detailsCard {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin-top: 0.5rem;
+@media screen and (max-width: 900px) {
+    .detailsCard {
+        margin-top: 0.5rem;
+        margin-right: 2rem;
+    }
+
+    .leftCard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0px 0px;
+        border: 1px;
+        border-color: #ddd;
+        border-style: solid;
+        border-radius: 20px;
+        box-shadow: 0px 0px 1rem #ddd;
+        margin-bottom: 2rem;
+    }
+
+    .detailsCard .latestRecordCard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+        border: 1px;
+        border-color: #ddd;
+        border-style: solid;
+        border-radius: 20px;
+        box-shadow: 0px 0px 1rem #ddd;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .detailsCard {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        margin-top: 0.5rem;
+    }
+
+    .leftCard {
+        display: flex;
+        flex-direction: column;
+        margin: 0px 0px;
+        border: 1px;
+        border-color: #ddd;
+        border-style: solid;
+        border-radius: 20px;
+        box-shadow: 0px 0px 1rem #ddd;
+        width: 50%;
+        margin-right: 2rem;
+    }
+
+    .leftCard h3 {
+        display: flex;
+        align-self: center;
+        text-align: center;
+    }
+
+    .infoCard {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .detailsCard .latestRecordCard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+        border: 1px;
+        border-color: #ddd;
+        border-style: solid;
+        border-radius: 20px;
+        box-shadow: 0px 0px 1rem #ddd;
+        width: 50%;
+        margin-right: 1rem;
+    }
+
+}
+
+@media screen and (max-width: 700px) {
+    .quickAccess {
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0px 0px 8px #ddd;
+        max-height: 10rem;
+        overflow-y: auto;
+        margin: 0;
+        margin-top: 0.1rem;
+        top: 7.65rem;
+        right: 1.2rem;
+        cursor: pointer;
+        position: absolute;
+        width: 43.5%;
+    }
 }
 
 
-.leftCard {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0px 0px;
-    border: 1px;
-    border-color: #ddd;
-    border-style: solid;
-    border-radius: 20px;
-    box-shadow: 0px 0px 1rem #ddd;
-    width: 50%;
-    margin-right: 2rem;
-}
 
 .leftCard .profileImg {
     margin-left: 1rem;
-    /* justify-content: flex-start; */
 }
 
 .leftCard .userCard {
@@ -116,44 +190,22 @@
     width: 100%;
 }
 
-.detailsCard .latestRecordCard {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    border: 1px;
-    border-color: #ddd;
-    border-style: solid;
-    border-radius: 20px;
-    box-shadow: 0px 0px 1rem #ddd;
-    width: 50%;
-    margin-right: 1rem;
-}
 
-/* .detailsCard .leftCard .userCard .userContent .sectionHead .value {
-    word-break: none;
-} */
 
 .sectionHead {
     display: flex;
-    /* width: 100%; */
     flex-direction: row;
 }
 
 .sectionHead .header {
-    /* width: 20%; */
     font-size: 1rem;
     font-weight: bolder;
-    /* align-self: flex-start; */
 }
 
 .sectionHead .value {
-    /* width: 80%; */
     font-size: 1rem;
-    /* align-self: center; */
     text-align: left;
-    /* word-break: break-all; */
+    word-break: break-all;
 }
 
 .latestRecContainer {
