--- a/client/src/components/book/requestBook.css
+++ b/client/src/components/book/requestBook.css
@@ -46,3 +46,9 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+.errorMessage {
+    color: red;
+    padding-left: 0.6rem;
+    font-size: small;
+}
